--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -2,13 +2,14 @@
 @import url(./custom_properties.css);
 
 body{
-    font-family: var(--heading-font);
+    font-family: var(--global-font);
 }
-h1,h2,h3,h4,h5,h6,p{
-    /* font-family: var(--global-font); */
+h1,h2,h3,h5,h6,h4{
+    font-family: var(--heading-font);
     margin: 0;
-    
+    color: var(--color-primary);    
 }   
 h1{
     font-size:var(--font-size);
 }
+h4{color: var(--color-black);}
