--- a/src/assets/css/hamburger.css
+++ b/src/assets/css/hamburger.css
@@ -2,6 +2,7 @@
   
   .hamburger .line{
     width: 40px;
+    border-radius: 10px;
     height: 5px;
     background-color:var(--color-primary);
     display: block;
