--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -4,7 +4,7 @@
 body{
     font-family: var(--global-font);
 }
-h1,h2,h3,h5,h6,h4{
+h1,h2,h3,h5,h6,h4,span{
     font-family: var(--heading-font);
     margin: 0;
     color: var(--color-primary);    
