Adding new link hover effect in HEader

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -65,6 +65,7 @@ main section{
     box-shadow: none;
 }
 
+
 @keyframes img-roated {
     to{
         transform: rotate(0deg);
@@ -102,5 +103,42 @@ and (min-width : 768px) {
 }
 @media only screen 
 and (min-width : 1200px) {
+
+}
+@media only screen 
+and (min-width : 992px) {
+
+
+    .nav-link{
+        display: inline-block;
+        overflow: hidden;
+        padding: 8px 32px;
+        position: relative;
+    }
+    .nav-link>span::before , .nav-link>span::after {
+        position: absolute;
+        content: "";
+        width: 0;
+        height: 2px;
+        background-color: var(--color-primary) ;
+        display: block;
+        /* border-radius: 5p    ; */
+        transition: all 0.4s ease-in-out;
+    }
+    .nav-link>span::before {
+        top: 0;
+        left: 0;
+    } .nav-link>span::after {
+        bottom: 0;
+        right: 0;
+    }
+
+    .nav-link:hover> span::before,.nav-link:hover> span::after{
+        width: 100%;
+    }
+
+    .nav-btn>span::before,.nav-btn>span::after{
+        content: none !important;
+    }
 
 }
